update controllers for database updates, routes was also update
