# routes/destination.js
@@ -6,8 +6,8 @@ const destinationController = require('../controller/destination')
 router.get('/', destinationController.allDestinations);
 
 router.post('/', destinationController.createDestination);
-router.put('/', destinationController.updateDestination);
-router.delete('/', destinationController.deleteDestination);
+router.put('/:id', destinationController.updateDestination);
+router.delete('/:id', destinationController.deleteDestination);
 
 module.exports = router;
 
